@@ -193,7 +193,7 @@ if($User->user->authMethod == 1) {
 			);
 			foreach($opts as $key=>$line) {
 				if($User->user->menuType == $key) { print "<option value='$key' selected>$line</option>"; }
-				else 								{ print "<option value='$key'>$line</option>"; }
+				else 							  { print "<option value='$key'>$line</option>"; }
 			}
 			?>
 		</select>
@@ -228,7 +228,6 @@ if($User->user->authMethod == 1) {
 <span class="info2"><?php print _("Select widgets to be displayed on dashboard"); ?></span>
 
 
-<script type="text/javascript" src="js/jquery-ui-1.10.4.custom.min.js"></script>
 <script>
 $(document).ready(function() {
 	// initialize sortable
