@@ -6,8 +6,8 @@ define("VERSION_VISIBLE", "1.3.2");							//visible version in footer
 /* set latest revision */
 define("REVISION", "000");									//revision always changes, verision only if database structure changes
 /* set database schema version */
-define("DBVERSION", "0");									//database schema version (future feature)
+define("DBVERSION", "1");									//database schema version (future feature)
 /* set last possible upgrade */
 define("LAST_POSSIBLE", "1.1");								//minimum required version to be able to upgrade
 /* prefix for css/js */
-define("SCRIPT_PREFIX", "1.3.2");							//css and js folder prefix to prevent caching
+define("SCRIPT_PREFIX", "1.3.2.3");							//css and js folder prefix to prevent caching
